# sudbury

./: .gitignore  .travis.yml  LICENSE  Main.hs  Makefile  NOTES.md  README.md  configure  libwayland-client.so.0  stack.yaml  sudbury.cabal  sudbury_architecture.gv
Graphics/Sudbury/: Argument.hs  Internal.hs  Lifetime.hs  Message.hs  Object.hs  ProtocolXML.hs  Socket.hs  State.hs  WireMessages.hs  WirePackages.hs
Graphics/Sudbury/CABI/: Client.hs  Common.hs  DispatchFFI.hs  Protocol.hs  Server.hs  Structs.hsc
Graphics/Sudbury/Crap/: Client.hs  Common.hs  DispatchFFI.hs  Server.hs  Structs.hsc
Graphics/Sudbury/Protocol/: Knot.hs  Runtime.hs  Types.hs  XML.hs
Graphics/Sudbury/Protocol/Knot/: Types.hs
Graphics/Sudbury/Protocol/Runtime/: Types.hs
Graphics/Sudbury/Protocol/XML/: Types.hs
Graphics/Sudbury/Socket/: Wayland.hs
bench/: Main.hs
cbits/: init.c  wayland-client.c  wayland-msg-handling.c  wayland-msg-handling.h  wayland-os.c  wayland-protocol.c  wayland-util.c
tests/: Arbitrary.hs  Main.hs  Socket.hs  Wire.hs
