name:                sudbury
version:             0.1.0.0
synopsis:            Implementation of the wayland protocol
description:
  The @libwayland@ library is a C implementation of the wayland protocol.
  This library intends to prove that the wayland protocol can also be implemented in Haskell,
  and the long-term goal is to provide an elegant interface to the wayland protocol
  that is ABI-compatible with the C library.
license:             MIT
license-file:        LICENSE
author:              Auke Booij
maintainer:          auke@tulcod.com
-- copyright:
category:            Graphics
build-type:          Simple
extra-source-files:  README.md, cbits/wayland-msg-handling.h
cabal-version:       >=1.25

source-repository head
  type: git
  location: git://github.com/abooij/sudbury.git

library
  exposed-modules:
      Graphics.Sudbury.Protocol.XML
    , Graphics.Sudbury.Protocol.Types
    , Graphics.Sudbury.Socket
    , Graphics.Sudbury.Socket.Wayland
    , Graphics.Sudbury.WirePackages
    , Graphics.Sudbury.WireMessages
    , Graphics.Sudbury.Argument
    , Graphics.Sudbury.Internal
    , Graphics.Sudbury.Object
    , Graphics.Sudbury.State
    , Graphics.Sudbury.Message
    , Graphics.Sudbury.Lifetime
  -- other-modules:
  -- other-extensions:
  build-depends:
      base ==4.*
    , xml >=1.3 && <1.4
    , process >= 1.2 && <1.5
    , unix >=2.5 && <2.8
    , filepath >=1.2 && <1.5
    , network >=2.5 && <2.7
    , bytestring >=0.9 && <1
    , attoparsec >=0.13 && <1
    , attoparsec-binary >=0.2 && <1
    , store
    , store-core
    , cpu >=0.1 && <1
    , singletons >=2 && <3
    , template-haskell >=2.11 && <3
    , containers >=0.5 && <1
    , mtl >=2.2 && <3
    , libffi <0.2
    , stm >=2.4 && <2.6
  hs-source-dirs: .
  c-sources: cbits/wayland-msg-handling.c
  include-dirs: cbits
  default-language: Haskell2010
  default-extensions:
      GADTs
    , DataKinds
    , TypeFamilies
    , ExistentialQuantification
  ghc-options: -Wall -fwarn-incomplete-record-updates -fwarn-unused-do-bind

foreign-library wayland-client
  lib-version-info: 3:0:3
  type: native-shared
  other-modules:
      Graphics.Sudbury.CABI.Client
    , Graphics.Sudbury.CABI.Common
    , Graphics.Sudbury.CABI.Structs
    , Graphics.Sudbury.CABI.DispatchFFI
  hs-source-dirs: .
  build-depends:
      -- Version bounds are already in the library section above

      base ==4.*
    , xml >=1.3 && <1.4
    , process >= 1.2 && <1.5
    , unix >=2.5 && <2.8
    , filepath >=1.2 && <1.5
    , network >=2.5 && <2.7
    , bytestring >=0.9 && <1
    , attoparsec >=0.13 && <1
    , attoparsec-binary >=0.2 && <1
    , store
    , store-core
    , cpu >=0.1 && <1
    , singletons >=2 && <3
    , template-haskell >=2.11 && <3
    , containers >=0.5 && <1
    , mtl >=2.2 && <3
    , libffi <0.2
    , stm >=2.4 && <2.6
    , sudbury
  default-extensions:
      GADTs
    , DataKinds
    , TypeFamilies
    , ExistentialQuantification
  c-sources:
      cbits/wayland-protocol.c
    , cbits/init.c
    , cbits/wayland-client.c
    , cbits/wayland-os.c
    , cbits/wayland-util.c
  include-dirs: cbits/
  default-language: Haskell2010
  ghc-options: -Wall -fwarn-incomplete-record-updates -fwarn-unused-do-bind

test-suite tests
   hs-source-dirs: tests
   main-is: Main.hs
   other-modules:
      Wire
    , Arbitrary
  type: exitcode-stdio-1.0
  build-depends:
       base
    , sudbury
    , QuickCheck
    , test-framework
    , test-framework-quickcheck2
    , attoparsec
    , bytestring
    , store
  ghc-options: -Wall
  default-language: Haskell2010
